Only allow .zip files in Backup-file-picker

--- a/interfaces/Config/templates/config_general.tmpl
+++ b/interfaces/Config/templates/config_general.tmpl
@@ -241,7 +241,7 @@
                     </div>
                     <div class="field-pair">
                         <label class="config" for="config_backup_file">$T('restore-backup')</label>
-                        <input type="file" name="config_backup_file" id="config_backup_file" />
+                        <input type="file" accept=".zip" name="config_backup_file" id="config_backup_file" />
                         <span class="desc">$T('explain-admin_backup')</span>
                     </div>
                     <div class="field-pair">
