Fix category script typeahead alignment

--- a/interfaces/Config/templates/config_cat.tmpl
+++ b/interfaces/Config/templates/config_cat.tmpl
@@ -111,7 +111,7 @@
         });
 
         // Add autocomplete and file-browser
-        \$('.fileBrowserSmall').typeahead().fileBrowser();
+        \$('.fileBrowserSmall').typeahead({appendTo: 'body'}).fileBrowser();
 
         // Make categories sortable
         \$('.padTable').sortable({
