Remove unused texts from skintext and add test for it

--- a/interfaces/Glitter/templates/main.tmpl
+++ b/interfaces/Glitter/templates/main.tmpl
@@ -102,6 +102,7 @@
             glitterTranslate.status['Repair'] = "$T('stage-repair')";
             glitterTranslate.status['Filejoin'] = "$T('stage-filejoin')";
             glitterTranslate.status['Unpack'] = "$T('stage-unpack')";
+            glitterTranslate.status['Deobfuscate'] = "$T('stage-deobfuscate')";
             glitterTranslate.status['Script'] = "$T('stage-script')";
             glitterTranslate.status['Source'] = "$T('stage-source')";
             glitterTranslate.status['Servers'] = "$T('stage-servers')";
