Split explain-auto_sort for easier translation update

--- a/interfaces/Config/templates/config_switches.tmpl
+++ b/interfaces/Config/templates/config_switches.tmpl
@@ -149,7 +149,7 @@
                             <option value="size asc" <!--#if $auto_sort == "size asc" then 'selected="selected"' else ""#--> >$T('Glitter-sortSizeAsc')</option>
                             <option value="size desc" <!--#if $auto_sort == "size desc" then 'selected="selected"' else ""#--> >$T('Glitter-sortSizeDesc')</option>
                         </select>
-                        <span class="desc">$T('explain-auto_sort')</span>
+                        <span class="desc">$T('explain-auto_sort') $T('explain-auto_sort_completed')</span>
                     </div>
                     <div class="field-pair">
                         <label class="config" for="direct_unpack">$T('opt-direct_unpack')</label>
