--- a/interfaces/Config/templates/config_switches.tmpl
+++ b/interfaces/Config/templates/config_switches.tmpl
@@ -141,6 +141,7 @@
                         <label class="config" for="auto_sort">$T('opt-auto_sort')</label>
                         <select name="auto_sort" id="auto_sort">
                             <option value="">$T('default')</option>
+                            <option value="completed desc" <!--#if $auto_sort == "completed desc" then 'selected="selected"' else ""#--> >$T('Glitter-sortCompleted')</option>
                             <option value="avg_age desc" <!--#if $auto_sort == "avg_age desc" then 'selected="selected"' else ""#--> >$T('Glitter-sortAgeAsc')</option>
                             <option value="avg_age asc" <!--#if $auto_sort == "avg_age asc" then 'selected="selected"' else ""#--> >$T('Glitter-sortAgeDesc')</option>
                             <option value="name asc" <!--#if $auto_sort == "name asc" then 'selected="selected"' else ""#--> >$T('Glitter-sortNameAsc')</option>
@@ -148,7 +149,7 @@
                             <option value="size asc" <!--#if $auto_sort == "size asc" then 'selected="selected"' else ""#--> >$T('Glitter-sortSizeAsc')</option>
                             <option value="size desc" <!--#if $auto_sort == "size desc" then 'selected="selected"' else ""#--> >$T('Glitter-sortSizeDesc')</option>
                         </select>
-                        <span class="desc">$T('explain-auto_sort')</span>
+                        <span class="desc">$T('explain-auto_sort') $T('explain-auto_sort_completed')</span>
                     </div>
                     <div class="field-pair">
                         <label class="config" for="direct_unpack">$T('opt-direct_unpack')</label>
