tweak hotkeys, add pagination navigation, use jquery.hotkeys

--- a/interfaces/Glitter/templates/main.tmpl
+++ b/interfaces/Glitter/templates/main.tmpl
@@ -121,6 +121,7 @@
             <!--#include raw $webdir + "/static/javascripts/jquery-3.5.1.min.js"#-->
             <!--#include raw $webdir + "/static/javascripts/jquery-ui.min.js"#-->
             <!--#include raw $webdir + "/static/javascripts/jquery.peity.min.js"#-->
+            <!--#include raw $webdir + "/static/javascripts/jquery.hotkeys.min.js"#-->
             <!--#include raw $webdir + "/static/javascripts/moment-2.26.0.min.js"#-->
             <!--#include raw $webdir + "/static/javascripts/knockout-3.5.1.min.js"#-->
             <!--#include raw $webdir + "/static/javascripts/knockout-extensions.js"#-->
