--- a/interfaces/Config/templates/config_folders.tmpl
+++ b/interfaces/Config/templates/config_folders.tmpl
@@ -8,7 +8,7 @@
             <input type="checkbox" id="advanced-settings-button" name="advanced-settings-button"> $T('button-advanced')
         </label>
     </div>
-    <form action="saveDirectories" method="post" name="fullform" class="fullform" autocomplete="off">
+    <form action="folders/save" method="post" name="fullform" class="fullform" autocomplete="off">
     <input type="hidden" id="apikey" name="apikey" value="$apikey" />
     <input type="hidden" name="output" value="json" />
     <input type="hidden" id="ajax" name="ajax" value="1" />
