Add option to specify Backup Folder and clarify scheduler usage
Closes #2288

--- a/interfaces/Config/templates/config_folders.tmpl
+++ b/interfaces/Config/templates/config_folders.tmpl
@@ -105,6 +105,11 @@
                     <span class="desc">$T('explain-admin_dir2')</span>
                 </div>
                 <div class="field-pair">
+                    <label class="config" for="backup_dir">$T('opt-backup_dir')</label>
+                    <input type="text" name="backup_dir" id="backup_dir" value="$backup_dir" data-initialdir="$my_home" />
+                    <span class="desc">$T('explain-backup_dir')</span>
+                </div>
+                <div class="field-pair">
                     <label class="config" for="log_dir">$T('opt-log_dir')</label>
                     <input type="text" name="log_dir" id="log_dir" value="$log_dir" data-initialdir="$my_lcldata" />
                     <span class="desc">$T('explain-log_dir')</span>
