--- a/interfaces/Config/templates/config_general.tmpl
+++ b/interfaces/Config/templates/config_general.tmpl
@@ -231,13 +231,9 @@
         <div class="section">
             <div class="col2">
                 <h3>$T('backup') <a href="$helpuri$help_uri#toc3" target="_blank"><span class="glyphicon glyphicon-question-sign"></span></a></h3>
-                <p><b>$T('restartRequired')</b></p>
             </div><!-- /col2 -->
             <div class="col1">
                 <fieldset>
-                    <div class="field-pair advanced-settings">
-                        <h5 class="darkred nomargin">$T('opt-complete_dir'): <span class="path">$backup_dir</span></h5>
-                    </div>
                     <div class="field-pair">
                         <label class="config" for="create_backup">$T('create-backup')</label>
                         <span class="desc"><button class="btn btn-default createBackup" type="button" id="create_backup"><span class="glyphicon glyphicon glyphicon-import"></span> $T('create-backup')</button></span>
@@ -246,6 +242,7 @@
                     <div class="field-pair">
                         <label class="config" for="config_backup_file">$T('restore-backup')</label>
                         <input type="file" accept=".zip" name="config_backup_file" id="config_backup_file" />
+                        <span class="desc">$T('restartRequired')</span>
                     </div>
                     <div class="field-pair">
                         <button class="btn btn-default saveButton"><span class="glyphicon glyphicon-open"></span> $T('restore-backup')</button>
