--- a/interfaces/Glitter/templates/include_menu.tmpl
+++ b/interfaces/Glitter/templates/include_menu.tmpl
@@ -81,7 +81,7 @@
             <li data-tooltip="true" data-placement="bottom" title="SABnzbd $T('menu-config')">
                 <a href="./config/"><span class="glyphicon glyphicon-cog"></span></a>
             </li>
-            <li class="dropdown main-menu-link" data-bind="css: { 'active-on-queue-finish-menu': onQueueFinish()}">
+            <li class="dropdown main-menu-link" data-bind="css: { 'active-on-queue-finish-menu': finishaction()}">
                 <a href="#" data-toggle="dropdown"  onclick="keepOpen(this)">
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
@@ -102,7 +102,8 @@
                     <li class="divider"></li>
                     <li class="dropdown-header"><span class="glyphicon glyphicon-off"></span> $T('Glitter-onFinish'):</li>
                     <li>
-                        <select data-bind="value: onQueueFinish, event: { change: setOnQueueFinish }" class="form-control">
+                        <!-- ko if: queue.scriptsListLoaded -->
+                        <select data-bind="value: finishaction, event: { change: setOnQueueFinish }" class="form-control">
                             <option value=""></option>
                             <optgroup label="$T('eoq-actions')">
                                 <option value="shutdown_program">$T('shutdownSab')</option>
@@ -114,12 +115,13 @@
                             </optgroup>
                             <optgroup label="$T('eoq-scripts')" data-bind="visible: queue.scriptsList().length > 1">
                                 <!-- ko foreach: queue.scriptsList -->
-                                    <!-- ko if: \$data != glitterTranslate.noneText -->
-                                        <option data-bind="text: \$data, attr: { value: 'script_'+\$data } " ></option>
+                                    <!-- ko if: \$data.scriptValue != 'None' -->
+                                        <option data-bind="text: \$data.scriptText, attr: { value: 'script_'+\$data.scriptValue } " ></option>
                                     <!-- /ko -->
                                 <!-- /ko -->
                             </optgroup>
                         </select>
+                        <!-- /ko -->
                     </li>
                 </ul>
             </li>
