ran through codespell to cleanup a bit of typos, excluded a bit to try and avoid any issues

--- a/interfaces/Config/templates/config_general.tmpl
+++ b/interfaces/Config/templates/config_general.tmpl
@@ -281,7 +281,7 @@
             // Skip the fancy stuff, just submit
             this.submit()
         })
-        // No JSON reponse
+        // No JSON response
         \$('#ajax').val('')
     })
     hideOrShowTranslate()
