--- a/interfaces/Glitter/templates/include_overlays.tmpl
+++ b/interfaces/Glitter/templates/include_overlays.tmpl
@@ -1,6 +1,6 @@
 <!--#from sabnzbd.constants import VALID_ARCHIVES, VALID_NZB_FILES#-->
 <!--#set $file_exts = ', '.join(VALID_NZB_FILES + VALID_ARCHIVES)#-->
-<!-- Notifcation box -->
+<!-- Notification box -->
 <div class="main-notification-box" style="display: none">
     <div class="main-notification-box-uploading">
         <span class="glyphicon glyphicon-open"></span> $T('Glitter-notification-uploading') <span class="main-notification-box-file-count"></span>
