--- a/interfaces/Config/templates/config_server.tmpl
+++ b/interfaces/Config/templates/config_server.tmpl
@@ -549,7 +549,7 @@
                 theButton.removeAttr("disabled")
                 theButton.find('span').toggleClass('glyphicon-sort glyphicon-refresh spin-glyphicon')
 
-                // Succes or not?
+                // Success or not?
                 if(data.value.result) {
                     resultBox.addClass('alert-success')
                     resultBox.prepend('<span class="glyphicon glyphicon-ok-sign"></span> ')
