--- a/interfaces/Config/templates/config_general.tmpl
+++ b/interfaces/Config/templates/config_general.tmpl
@@ -281,7 +281,7 @@
             // Skip the fancy stuff, just submit
             this.submit()
         })
-        // No JSON response
+        // No JSON reponse
         \$('#ajax').val('')
     })
     hideOrShowTranslate()
