--- a/interfaces/Config/templates/config.tmpl
+++ b/interfaces/Config/templates/config.tmpl
@@ -54,12 +54,12 @@
                     </td>
                 </tr>
                 <!--#end if#-->
-                <!--#if not $have_sabyenc#-->
+                <!--#if not $have_sabctools#-->
                 <tr>
-                    <th scope="row">SABYenc:</th>
+                    <th scope="row">SABCTools:</th>
                     <td>
                         <span class="label label-danger">$T('notAvailable')</span>
-                        <a href="$helpuri$help_uri#no_sabyenc" target="_blank"><span class="glyphicon glyphicon-question-sign"></span></a>
+                        <a href="$helpuri$help_uri#no_sabctools" target="_blank"><span class="glyphicon glyphicon-question-sign"></span></a>
                     </td>
                 </tr>
                 <!--#end if#-->
