Enable Newsserver SSL by default

--- a/interfaces/Config/templates/config_server.tmpl
+++ b/interfaces/Config/templates/config_server.tmpl
@@ -51,11 +51,11 @@
                     </div>
                     <div class="field-pair advanced-settings">
                         <label class="config" for="port">$T('srv-port')</label>
-                        <input type="number" name="port" id="port" size="8" value="119" min="0" />
+                        <input type="number" name="port" id="port" size="8" value="563" min="0" />
                     </div>
                     <div class="field-pair">
                         <label class="config" for="ssl">$T('srv-ssl')</label>
-                        <input type="checkbox" name="ssl" id="ssl" value="1" />
+                        <input type="checkbox" name="ssl" id="ssl" value="1" checked />
                         <span class="desc">$T('explain-ssl')</span>
                     </div>
                     <!-- Tricks to avoid browser auto-fill, fixed on-submit with javascript -->
